left-sidebar: Fix visibility of navigation menu icon in @media queries.
Previously, the `.left-sidebar-navigation-menu-icon` was hidden in certain responsive views due to @media styles. This commit ensures the icon visibility @media styles and in other cases its visible only on hover
fixes part of #34470

--- a/web/styles/left_sidebar.css
+++ b/web/styles/left_sidebar.css
@@ -1161,6 +1161,10 @@ li.top_left_scheduled_messages {
             color: var(--color-vdots-hover);
             background-color: var(--color-background-sidebar-action-hover);
         }
+
+        @media (hover: none) {
+            opacity: 0.9;
+        }
     }
 }
 
